bencher/tmp/regexdna/log/regexdna.1.python.log

Tue, 04 Feb 2020 18:50:31 GMT

COMMAND LINE:
/opt/src/Python-3.8.0/bin/python3 regexdna.python 0 < regexdna-input10000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "regexdna.python", line 35
    print ilen
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(ilen)?
